day 6c: odds and ends - clean up vignettes - extract contrasts/xlevels correctly within getSummary() - version 0.1-0, concluding 2019-S lecture
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2019@14 630eee50-358b-4df4-8019-841fff668cad

--- a/trunk/pkg/htobit/vignettes/htobit-md.Rmd
+++ b/trunk/pkg/htobit/vignettes/htobit-md.Rmd
@@ -5,7 +5,7 @@ date: 2017-06-13
 output: rmarkdown::html_vignette
 bibliography: htobit.bib
 vignette: >
-  %\VignetteIndexEntry{Heteroscedastic Tobit Regression}
+  %\VignetteIndexEntry{Heteroscedastic Tobit Regression (Markdown)}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteDepends{htobit, car, crch, lmtest, memisc}
   %\VignetteKeywords{heteroscedastic tobit, regression, R}
@@ -81,11 +81,10 @@ A number of standard S3 methods are provided:
 | `bread()`       | Extract bread for `sandwich` covariance                                              |
 | `estfun()`      | Extract estimating functions (= gradient contributions) for `sandwich` covariances   |
 | `getSummary()`  | Extract summary statistics for `mtable()`                                            |
-| `Boot()`        | Bootstrap regression coefficients using `car` and `boot`                             |
 
 Due to these methods a number of useful utilities work automatically, e.g., `AIC()`, `BIC()`,
 `coeftest()` (`lmtest`), `lrtest()` (`lmtest`), `waldtest()` (`lmtest`),
-`linearHypothesis()` (`car`), `mtable()` (`memisc`), etc.
+`linearHypothesis()` (`car`), `mtable()` (`memisc`), `Boot()` (`car`), etc.
 
 ------
 
