--- a/pkg/htobit/vignettes/htobit.bib
+++ b/pkg/htobit/vignettes/htobit.bib
@@ -3,7 +3,7 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2017},
+  year = {2019},
   url = {https://www.R-project.org/}
 }
 
@@ -15,7 +15,7 @@
   volume = {8},
   number = {1},
   pages = {173--181},
-  url = {https://journal.R-project.org/archive/2016-1/messner-mayr-zeileis.pdf}
+  doi = {10.32614/RJ-2016-012}
 }
 
 @Article{Formula,
@@ -43,16 +43,16 @@
 @Manual{memisc,
   title = {{memisc}: Tools for Management of Survey Data and the Presentation of Analysis Results},
   author = {Martin Elff},
-  year = {2017},
-  note = {R package version 0.99.14.9},
+  year = {2019},
+  note = {R package version 0.99.17.2},
   url = {https://CRAN.R-project.org/package=memisc},
 }
 
 @Book{car,
   author = {John Fox and Sanford Weisberg},
   title = {An {R} Companion to Applied Regression},
-  year = {2011},
-  edition = {2nd},
+  year = {2019},
+  edition = {3rd},
   publisher = {Sage},
   address = {Thousand Oaks},
   url = {http://socserv.socsci.mcmaster.ca/jfox/Books/Companion}
