--- a/pkg/LFUrmutils/vignettes/bibliography.bib
+++ b/pkg/LFUrmutils/vignettes/bibliography.bib
@@ -4,4 +4,36 @@
 	organization = {J.P.Morgan/Reuters},
 	address = {New York},
 	year = {1996},
-	keywords = {R}}
+	keywords = {R}
+}
+
+@book{Danielsson11,
+	series = {Wiley finance series},
+	isbn = {9780470669433},
+	year = {2011},
+	title = {Financial risk forecasting: the theory and practice of forecasting market risk, with implementation in R and Matlab},
+	edition = {1. ed.},
+	author = {Daníelsson, Jón},
+	keywords = {Finance, R}
+}
+
+@book{Ruppert15,
+	author = {Ruppert, David and Matteson, David S.},
+	title = {Statistics and Data Analysis for Financial Engineering},
+	series = {Springer texts in statistics},
+	edition = {2. ed.},
+	year = {2015},
+	address = {New York, NY},
+	publisher = {Springer},
+	ISBN = {9781493926138}
+}
+
+@book{Jorion07,
+	author = {Jorion, Philippe},
+	title = {Value at risk},
+	edition = {3. ed.},
+	year = {2007},
+	address = {New York, NY},
+	publisher = {McGraw-Hill},
+	ISBN = {9780071464956}
+}
