•	Imom und ihurst: importing moneyness/maturities redefined and documented •	Function-Documentation: out-commented examples were commented in •	Data-documentation reedited •	Changed classes from “ivol” to c(“imom”, “ivol”) and c(“ihurst”,  “ivol”) •	Description reedited: removing unneeded information, new version number (0.1-1) •	Improved documentation for imom/ihurst (Value, Details, Arguments) •	Hurst estimation redefined: multivariate lm.fit instead of loop •	iMom estimation redefined: multivariate lm.fit instead of loop •	Method “summary” improved •	Method “print” added
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2019@114 630eee50-358b-4df4-8019-841fff668cad

--- a/pkg/ivol/vignettes/ivol.Rmd
+++ b/pkg/ivol/vignettes/ivol.Rmd
@@ -38,11 +38,11 @@ If the input data is in form of a time-series, the function runs the regression 
 #### *Example*
 
 ```{r}
-# library(ivol)
-# data(otm)
-# x <- imom(otm)
-# plot(x)
-# x$mom
+library(ivol)
+data(otm)
+x <- imom(otm)
+plot(x)
+x$mom
 
 ```
 
@@ -63,11 +63,11 @@ with $\sigma_f$ as the fractal volatility and $H$ as the implied Hurst exponent.
 #### *Example*
 
 ```{r}
-# library(ivol)
-# data(atm)
-# x <- ihurst(atm)
-# plot(x)
-# x$h
+library(ivol)
+data(atm)
+x <- ihurst(atm)
+plot(x)
+x$h
 ```
 
 
