minor changes in "summary.ivol"
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2019@115 630eee50-358b-4df4-8019-841fff668cad

--- a/pkg/ivol/vignettes/ivol.Rmd
+++ b/pkg/ivol/vignettes/ivol.Rmd
@@ -2,9 +2,9 @@
 title: "ivol: Decomposing Implied Volatilites"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{ivol}
+  %\VignetteIndexEntry{ivol: Decomposing Implied Volatilites}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+  \usepackage[utf8]{inputenc}
 ---
 
 ```{r, include = FALSE}
